--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "matrix-led-font",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A font for using MAX7219 LED Matrix with Arduino.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test"
   },
   "author": "Lyle Troxell <lyle@troxell.com>(http://lyle.troxell.com)",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^2.4.5"
+  }
 }
