--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "mocha test"
   },
+  "repository" :
+  { "type" : "git"
+  , "url" : "https://github.com/lyle/matrix-led-font.git"
+  },
+
   "author": "Lyle Troxell <lyle@troxell.com>(http://lyle.troxell.com)",
   "license": "MIT",
   "devDependencies": {
