--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
   "name": "matrix-led-font",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "A font for using MAX7219 LED Matrix with Arduino.",
-  "main": "index.js",
-  "scripts": {
-    "test": "mocha test"
-  },
-  "repository" :
-  { "type" : "git"
-  , "url" : "https://github.com/lyle/matrix-led-font.git"
-  },
-
+  "main": "src/index.js",
   "author": "Lyle Troxell <lyle@troxell.com>(http://lyle.troxell.com)",
   "license": "MIT",
+  "engines": {
+    "node": ">=8.0"
+  },
+  "watch": {
+    "test": "**.js"
+  },
+  "scripts": {
+    "watch": "npm-watch",
+    "test": "mocha test",
+    "docs": "esdoc"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lyle/matrix-led-font.git"
+  },
   "devDependencies": {
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "npm-watch": "^0.4.0",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
+    "esdoc-node": "^1.0.3"
   }
 }
